samples/_failures_safe/1761450892_1eeb2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9359c7d.c: In function ‘display_compression_info’:
./samples/SAFE/__tmp_a9359c7d.c:158:12: error: missing terminating " character
  158 |     printf("  Compression ratio
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a9359c7d.c:158:5: error: expected expression at end of input
  158 |     printf("  Compression ratio
      |     ^~~~~~
./samples/SAFE/__tmp_a9359c7d.c:158:5: error: expected declaration or statement at end of input
